# fast_zero

./: .gitignore  pyproject.toml
fast_zero/: app.py  security.py
fast_zero/routers/: auth.py  users.py
migrations/: env.py
migrations/versions/: 2c81afadd532_ceate_users_table.py  bd6abf17dcc4_adiciona_updated_at_on_users.py  c70a5926e3f7_create_users_table.py
src/fast_zero/: app.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_users.py
